<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_header"
        android:theme="@style/TitleText"
        android:layout_marginTop="96dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/applbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomelbl"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colourCyan"
        android:theme="@style/TitleText" />

    <Button
        android:id="@+id/button_shop"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="146dp"
        android:background="@drawable/main_buttons"
        android:gravity="center"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        tools:text="@string/action_start_shopping" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_order"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/main_buttons"
        android:gravity="center"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        tools:text="@string/action_prepare_order" />
</RelativeLayout>