<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/navigation_title"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/confirmation_subtitle"
        style="@style/TitleSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_your_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/navigation_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_horizontal_margin"
        android:background="@drawable/view_border"
        android:orientation="vertical"
        android:padding="@dimen/textview_padding"
        app:layout_constraintBottom_toTopOf="@+id/confirmation_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_subtitle">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirmation_list_code"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_textsize"
            tools:text="Order: 12345678" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirmation_list_date"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_textsize"
            tools:text="Date: 28/01/2019" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirmation_list_cost"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_textsize"
            tools:text="Total cost: £23.87" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmation_button_edit"
        style="@style/BorderedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_edit_list"
        app:layout_constraintBottom_toTopOf="@+id/confirmation_button_navigate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_info_container" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmation_button_navigate"
        style="@style/BorderedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_start_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_button_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>